--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,12 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
 
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://fonts.googleapis.com/css?family=PT+Serif|Open+Sans:300,400,600,700,800"
+    />
+
     <title>Scratch - A simple note taking app</title>
   </head>
   <body>
