--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,8 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     />
 
+    <script src="https://js.stripe.com/v3/"></script>
+
     <title>Scratch - A simple note taking app</title>
   </head>
   <body>
